apps/ingresses/azure_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crypto-ingress
  annotations:
  # this matches the ingress controller label, enabled by the "http_application_routing_enabled" feature of AKS
    kubernetes.io/ingress.class: addon-http-application-routing
  # kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
    - http:
        paths:
          - path: /svca
            pathType: Prefix
            backend:
              service:
                name: svc-a
                port:
                  number: 5000
          - path: /svcb
            pathType: Prefix
            backend:
              service:
                name: svc-b
                port:
                  number: 8888
